# slackwolf-api

./: .gitignore  .stylish-haskell.yaml  README.md  slackwolf-api.cabal  stack.yaml
src/: Main.hs
src/handlers/: Game.hs
src/models/: Game.hs
src/resources/: Game.hs
