name:                slackwolf-api
version:             0.1.0.0
synopsis:            Interact with Slackwolf's DB
description:         Please see README.md
homepage:            https://github.com/githubuser/slackwolf-api#readme
license:             MIT
license-file:        LICENSE
author:              Christopher Duncan
maintainer:          cj.duncan.a@gmail.com
copyright:           2017 Christopher Duncan
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable slackwolf-api
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , scotty
                     , scotty-resource
                     , text
                     , time
                     , uuid
  other-modules:       Handlers.Game
                     , Models.Game
                     , Resources.Game

source-repository head
  type:     git
  location: https://github.com/cjduncana/slackwolf-api
